<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/md_blue_grey_700"
    tools:context="com.team16.antenna.trend.drivingassistancesystem.SignUp"
    android:id="@+id/linearrLayout_signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:ems="10"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:id="@+id/editText_completeNameSignUp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:text="@string/textView_countrySignup"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:textColorHint="@color/md_blue_grey_400"
                android:hint="@string/hint_countrySignup"
                android:id="@+id/editText_countrySignup"
                android:inputType="textPersonName"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_emailSignup" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:hint="@string/hint_emailSignup"
        android:ems="10"
        android:id="@+id/editText_emailSignup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_celphoneSignup" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:hint="@string/hint_celphoneSignup"
        android:ems="10"
        android:id="@+id/editText_cellphoneSignup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_passwordSignup" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:hint="@string/hint_passwordSignup"
        android:ems="10"
        android:id="@+id/editText_passwordSignup" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_passwordreviewSignup" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:hint="@string/hint_passwordrewiewSignup"
        android:ems="10"
        android:id="@+id/editText_passwordreviewSignup" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_checkboxSignup"
            android:id="@+id/checkboxSignup"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickCheckboxSignup"
            android:checked="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_termsSignUp"
            android:id="@+id/textView_terms"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickTextViewTerms"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_doneSignup"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_doneSignup"
        android:onClick="onClickButtonDone"/>

</LinearLayout>