<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/md_blue_grey_700"
    tools:context="com.team16.antenna.trend.drivingassistancesystem.Forget2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_forgetMessage2"
        android:padding="8dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_resendforget2"
        android:id="@+id/button_resend"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_backForget"
        android:text="@string/button_bakcForget2"
        android:onClick="onClickButtonBackForget"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_loginforget2"
        android:id="@+id/button_loginForget"
        android:onClick="onClickButtonLoginForget"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>