<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layaout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_grey_700"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/conti"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_above="@+id/textView2"
        android:layout_alignEnd="@+id/textView_forgetPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_emailLogin"
        android:layout_alignParentStart="true"
        android:text="@string/textView_emailLogin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/md_text_white"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/editText_emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:ems="30"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"
        android:hint="@string/hint_emailLogin"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_passwordLogin"
        android:layout_alignParentStart="true"
        android:text="@string/textView_passwordLogin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/md_text_white" />

    <EditText
        android:id="@+id/editText_passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_loginLogin"
        android:layout_alignParentStart="true"
        android:ems="30"
        android:hint="@string/hint_passwordLogin"
        android:inputType="textPassword"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_blue_grey_400"/>

    <Button
        android:id="@+id/button_loginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_forgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickButtonLoginLogin"
        android:text="@string/button_loginLogin" />


    <TextView
        android:id="@+id/textView_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickTextViewForget"
        android:padding="8dp"
        android:text="@string/textView_forget"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_text_white" />
</RelativeLayout>